--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
             padding: 20px;
         }
         .container {
-            max-width: 800px;
+            max-width: 90%;
             margin: auto;
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            overflow-x: auto;
         }
         table {
             width: 100%;
-            margin-top: 20px;
             border-collapse: collapse;
+            min-width: 600px;
         }
         th, td {
             padding: 10px;
             border: 1px solid #ddd;
             text-align: center;
+        }
+        th {
+            background-color: #800000;
+            color: white;
         }
         button {
             background: #800000;
@@ -43,12 +48,27 @@
         img {
             max-width: 50px;
             max-height: 50px;
+            cursor: pointer;
+        }
+        @media screen and (max-width: 768px) {
+            table {
+                display: block;
+                overflow-x: auto;
+            }
+            th, td {
+                font-size: 14px;
+                padding: 8px;
+            }
+            img {
+                max-width: 40px;
+                max-height: 40px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Booking Records</h2>
+        <h2>📌 Booking Records</h2>
         <table>
             <thead>
                 <tr>
@@ -82,7 +102,7 @@
                                  <td>${booking.customDesign ? `<img src="${booking.customDesign}" onclick="openImage('${booking.customDesign}')" alt="Custom Design">` : 'None'}</td>
                                  <td>${booking.date}</td>
                                  <td>${booking.time}</td>
-                                 <td><button onclick="deleteBooking(${index})">Delete</button></td>`;
+                                 <td><button onclick="deleteBooking(${index})">🗑 Delete</button></td>`;
                 bookingList.appendChild(row);
             });
         }
