--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pinSHOPPE Booking Records</title>
+    <title>Pin Shoppe Booking Records</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -61,21 +61,49 @@
             max-height: 50px;
             cursor: pointer;
         }
-        @media screen and (max-width: 768px) {
-            th, td {
-                font-size: 14px;
-                padding: 8px;
-            }
-            img {
-                max-width: 40px;
-                max-height: 40px;
-            }
+        .hidden {
+            display: none;
+        }
+        .search-box {
+            margin-bottom: 15px;
+        }
+        .search-box input {
+            padding: 8px;
+            margin-right: 10px;
+            border: 1px solid #800000;
+            border-radius: 5px;
+        }
+        .role-selection {
+            text-align: center;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>📌 pinSHOPPE Booking Records</h2>
+    <div class="role-selection">
+        <h2>Select Your Role</h2>
+        <button onclick="selectRole('viewer')">Viewer</button>
+        <button onclick="promptAdmin()">Admin</button>
+    </div>
+
+    <div class="container hidden" id="mainContainer">
+        <h2>📌 Pin Shoppe Booking Records</h2>
+
+        <div class="search-box">
+            <input type="text" id="searchName" placeholder="Search by Name" onkeyup="filterRecords()">
+            <input type="text" id="searchGrade" placeholder="Search by Grade & Section" onkeyup="filterRecords()">
+            <input type="date" id="searchDate" onchange="filterRecords()">
+            <select id="searchDesign" onchange="filterRecords()">
+                <option value="">All Designs</option>
+                <option value="Custom">Custom</option>
+                <script>
+                    for (let i = 1; i <= 20; i++) {
+                        document.write(`<option value="Design ${i}">Design ${i}</option>`);
+                    }
+                </script>
+            </select>
+        </div>
+
         <div class="table-wrapper">
             <table>
                 <thead>
@@ -87,16 +115,46 @@
                         <th>Custom Design</th>
                         <th>Date</th>
                         <th>Time</th>
-                        <th>Action</th>
+                        <th class="admin-only hidden">Action</th>
                     </tr>
                 </thead>
                 <tbody id="bookingList"></tbody>
             </table>
         </div>
-        <button onclick="clearBookings()">Clear All</button>
+        <button class="admin-only hidden" onclick="clearBookings()">Clear All</button>
     </div>
 
     <script>
+        let isAdmin = false;
+
+        function promptAdmin() {
+            let password = prompt("Enter Admin Password:");
+            if (password === "JoNyPinNa123") {
+                isAdmin = true;
+                enterSite();
+            } else {
+                alert("Incorrect password. Access denied.");
+            }
+        }
+
+        function selectRole(role) {
+            isAdmin = role === "admin";
+            enterSite();
+        }
+
+        function enterSite() {
+            document.querySelector(".role-selection").classList.add("hidden");
+            document.getElementById("mainContainer").classList.remove("hidden");
+
+            if (!isAdmin) {
+                document.querySelectorAll(".admin-only").forEach(el => el.classList.add("hidden"));
+            } else {
+                document.querySelectorAll(".admin-only").forEach(el => el.classList.remove("hidden"));
+            }
+            
+            loadBookings();
+        }
+
         function loadBookings() {
             let bookings = JSON.parse(localStorage.getItem("bookings")) || [];
             let bookingList = document.getElementById("bookingList");
@@ -104,15 +162,39 @@
 
             bookings.forEach((booking, index) => {
                 let row = document.createElement("tr");
-                row.innerHTML = `<td>${booking.name}</td>
-                                 <td>${booking.contact}</td>
-                                 <td>${booking.grade}</td>
-                                 <td>${booking.design ? 'Design ' + booking.design : 'Custom'}</td>
-                                 <td>${booking.customDesign ? `<img src="${booking.customDesign}" onclick="openImage('${booking.customDesign}')" alt="Custom Design">` : 'None'}</td>
-                                 <td>${booking.date}</td>
-                                 <td>${booking.time}</td>
-                                 <td><button onclick="deleteBooking(${index})">🗑 Delete</button></td>`;
+                row.innerHTML = `
+                    <td>${booking.name}</td>
+                    <td>${booking.contact}</td>
+                    <td>${booking.grade}</td>
+                    <td>${booking.design ? 'Design ' + booking.design : 'Custom'}</td>
+                    <td>${booking.customDesign ? `<img src="${booking.customDesign}" onclick="openImage('${booking.customDesign}')" alt="Custom Design">` : 'None'}</td>
+                    <td>${booking.date}</td>
+                    <td>${booking.time}</td>
+                    ${isAdmin ? `<td><button onclick="deleteBooking(${index})">🗑 Delete</button></td>` : ''}
+                `;
                 bookingList.appendChild(row);
+            });
+        }
+
+        function filterRecords() {
+            let nameFilter = document.getElementById("searchName").value.toLowerCase();
+            let gradeFilter = document.getElementById("searchGrade").value.toLowerCase();
+            let dateFilter = document.getElementById("searchDate").value;
+            let designFilter = document.getElementById("searchDesign").value;
+
+            let rows = document.querySelectorAll("#bookingList tr");
+            rows.forEach(row => {
+                let name = row.children[0].textContent.toLowerCase();
+                let grade = row.children[2].textContent.toLowerCase();
+                let date = row.children[5].textContent;
+                let design = row.children[3].textContent;
+
+                let match = (!nameFilter || name.includes(nameFilter)) &&
+                            (!gradeFilter || grade.includes(gradeFilter)) &&
+                            (!dateFilter || date === dateFilter) &&
+                            (!designFilter || design.includes(designFilter));
+
+                row.style.display = match ? "" : "none";
             });
         }
 
