--- a/index.html
+++ b/index.html
@@ -3,25 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note Storage</title>
+    <title>PinSHOPPE Booking Records</title>
     <style>
+        /* General Styles */
         body {
-            font-family: 'Times New Roman', serif;
-            background-color: white;
-            color: #4A235A;
+            font-family: Arial, sans-serif;
+            background-color: #f8f0ff;
+            text-align: center;
             margin: 0;
-            padding: 0;
+            padding: 20px;
             transition: background 0.3s, color 0.3s;
         }
-        /* Header */
-        header {
-            background-color: #800000;
-            color: white;
-            text-align: center;
-            padding: 15px 0;
-            font-size: 24px;
-            position: relative;
+        .container {
+            max-width: 100%;
+            width: 90%;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
         }
+        h2 {
+            color: #800000;
+        }
+        .hidden {
+            display: none;
+        }
+
         /* Sidebar */
         .menu-btn {
             position: absolute;
@@ -52,85 +61,136 @@
         .sidebar a:hover {
             background: #6D1B7B;
         }
+
         /* Dark Mode */
         .dark-mode {
             background-color: black;
             color: white;
         }
-        /* Container */
-        .container {
-            width: 60%;
-            margin: 20px auto;
-            background: #f8f0ff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-        }
-        textarea {
+
+        /* Table Styling */
+        .table-wrapper {
             width: 100%;
-            height: 300px;
-            padding: 10px;
-            border: 1px solid #800000;
-            border-radius: 5px;
-            resize: none;
+            overflow-x: auto;
+            margin-top: 20px;
         }
-        /* Tracker Button */
-        .tracker-btn {
-            display: block;
-            width: 60%;
-            margin: 20px auto;
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            min-width: 750px;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: center;
+        }
+        th {
             background-color: #800000;
             color: white;
-            text-align: center;
-            padding: 12px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: bold;
         }
-        .tracker-btn:hover {
-            background-color: #5a0e0e;
+        tr:hover {
+            background-color: #f2f2f2;
+        }
+
+        /* Filters */
+        .filter-container {
+            margin-bottom: 15px;
+        }
+        .filter-container input {
+            padding: 5px;
+            margin-right: 5px;
+            border: 1px solid #800000;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-<header>
-    <span class="menu-btn" onclick="toggleSidebar()">☰</span>
-    <h1>Note Storage</h1>
-    <p>Securely store your important notes</p>
-</header>
 
 <!-- Sidebar Menu -->
 <div class="sidebar" id="sidebar">
     <a href="#" onclick="toggleDarkMode()">🌗 Light/Dark Mode</a>
     <a href="#" onclick="trackIP()">📍 Track Visitor IP</a>
-    <a href="#">🔍 Track Someone (Coming Soon)</a>
-    <a href="#" onclick="showArchive()">📂 View Note Archive</a>
+    <a href="#">📋 Order Summary</a>
+    <a href="#">📦 Delivered Orders</a>
+    <a href="#">🚚 Order Status</a>
 </div>
 
-<!-- Note Storage -->
-<div class="container">
-    <h2>Stored Notes</h2>
-    <textarea id="notes" placeholder="Type your notes here..."></textarea>
+<!-- Login Page -->
+<div id="login">
+    <h2>🔒 Choose Your Role</h2>
+    <button onclick="setMode('viewer')">Viewer</button>
+    <button onclick="showPasswordInput()">Admin</button>
+    <div id="password-section" class="hidden">
+        <input type="password" id="adminPassword" placeholder="Enter Admin Password">
+        <button onclick="verifyAdmin()">Login</button>
+        <p id="error-message" class="error hidden">Incorrect password!</p>
+    </div>
 </div>
 
-<footer>
-    <p>&copy; 2025 Note Storage. All Rights Reserved.</p>
-</footer>
+<!-- Main Content -->
+<div id="main-content" class="container hidden">
+    <h2>📌 PinSHOPPE Booking Records</h2>
+    
+    <!-- Filters -->
+    <div class="filter-container">
+        <input type="text" id="searchName" placeholder="Search by Name" oninput="filterResults()">
+        <input type="text" id="searchContact" placeholder="Search by Contact" oninput="filterResults()">
+        <input type="text" id="searchGrade" placeholder="Search by Grade & Section" oninput="filterResults()">
+    </div>
+
+    <div class="table-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Contact</th>
+                    <th>Grade & Section</th>
+                    <th>Design</th>
+                    <th>Custom Design</th>
+                    <th>Status</th>
+                    <th id="adminActions" class="hidden">Action</th>
+                </tr>
+            </thead>
+            <tbody id="bookingList"></tbody>
+        </table>
+    </div>
+    
+    <button id="clearBtn" class="hidden" onclick="clearBookings()">Clear All</button>
+</div>
 
 <script>
-    // Sidebar Toggle
-    function toggleSidebar() {
-        let sidebar = document.getElementById("sidebar");
-        sidebar.style.left = sidebar.style.left === "0px" ? "-250px" : "0px";
+    let isAdmin = false;
+
+    function showPasswordInput() {
+        document.getElementById("password-section").classList.remove("hidden");
     }
 
-    // Light/Dark Mode Toggle
+    function verifyAdmin() {
+        let password = document.getElementById("adminPassword").value;
+        if (password === "sodium_chloride") {
+            isAdmin = true;
+            document.getElementById("login").classList.add("hidden");
+            document.getElementById("main-content").classList.remove("hidden");
+            document.getElementById("adminActions").classList.remove("hidden");
+            document.getElementById("clearBtn").classList.remove("hidden");
+            loadBookings();
+        } else {
+            document.getElementById("error-message").classList.remove("hidden");
+        }
+    }
+
+    function setMode(mode) {
+        if (mode === "viewer") {
+            document.getElementById("login").classList.add("hidden");
+            document.getElementById("main-content").classList.remove("hidden");
+        }
+        loadBookings();
+    }
+
     function toggleDarkMode() {
         document.body.classList.toggle("dark-mode");
     }
 
-    // Track Visitor IP
     function trackIP() {
         fetch("https://api64.ipify.org?format=json")
         .then(response => response.json())
@@ -143,18 +203,29 @@
         .catch(() => alert("Failed to track IP."));
     }
 
-    // Archive Notes
-    function showArchive() {
-        let notes = localStorage.getItem("notesArchive") || "No archived notes.";
-        alert("Archived Notes: \n" + notes);
+    function loadBookings() {
+        let bookings = JSON.parse(localStorage.getItem("bookings")) || [];
+        let bookingList = document.getElementById("bookingList");
+        bookingList.innerHTML = "";
+
+        bookings.forEach((booking, index) => {
+            let row = document.createElement("tr");
+            row.innerHTML = `<td>${booking.name}</td>
+                             <td>${booking.contact}</td>
+                             <td>${booking.grade}</td>
+                             <td>${booking.design ? 'Design ' + booking.design : 'Custom'}</td>
+                             <td>${booking.customDesign ? `<img src="${booking.customDesign}" width="50" height="50">` : 'None'}</td>
+                             <td>${booking.status || 'Pending'}</td>
+                             ${isAdmin ? `<td><button onclick="deleteBooking(${index})">🗑 Delete</button></td>` : ''}`;
+            bookingList.appendChild(row);
+        });
     }
 
-    // Auto Save Notes
-    let notesField = document.getElementById("notes");
-    notesField.value = localStorage.getItem("savedNotes") || "";
-    notesField.addEventListener("input", () => {
-        localStorage.setItem("savedNotes", notesField.value);
-    });
+    function clearBookings() {
+        localStorage.removeItem("bookings");
+        loadBookings();
+    }
 </script>
+
 </body>
 </html>
